<resources>
    <string name="app_name">4 Hearts Diet Tracker</string>
    <string name="logo_aplikacji">logo_aplikacji</string>
    <string name="_4_hearts_diet_tracker">4 Hearts Diet Tracker</string>
    <string name="dodaj_posilek">Dodaj posiłek</string>
    <string name="stworz_posilek">Stwórz posiłek</string>
    <string name="historia_posilkow">Historia posiłków</string>
    <string name="stworz_nowy_posilek">Stworz nowy posiłek</string>
    <string name="podaj_nazwe_posilku">Podaj nazwę posiłku:</string>
    <string name="dalej">Dalej</string>
    <string name="nazwa">Nazwa</string>
    <string name="wartosc_energetyczna">Wartość energetyczna (kcal)</string>
    <string name="tluszcz">Tłuszcz (g)</string>
    <string name="kwasy_tluszczowe_nasycone">Kwasy tłuszczowe nasycone (g)</string>
    <string name="weglowodany">Węglowodany (g)</string>
    <string name="cukry">Cukry (g)</string>
    <string name="bialko">Białko (g)</string>
    <string name="sol">Sól (g)</string>
    <string name="ile_porcji">Ile porcji zawiera potrawa</string>
    <string name="skladniki">Lista składników (nazwa i ilość)</string>
    <string name="instrukcja_przygotowania">Instrukcja przygotowania</string>
    <string name="skladniki_final">Składniki</string>
    <string name="wartosc_odzywcza">Wartość odżywcza całego posiłku</string>
    <string name="podglad">Podgląd</string>
    <string name="ilosc_porcji">Ilość porcji</string>
    <string name="ilosc_zjedzonych_porcji">Ilość zjedzonych porcji</string>
    <string name="data_posilku">Data posiłku</string>
    <string name="data">Data</string>
    <string name="wybierz">Wybierz</string>
    <string name="posilki_tego_dnia">Posiłki tego dnia</string>
    <string name="warto_odzywcza_wszystkich_posilkow">Wartość odżywcza\nwszystkich posiłków</string>
    <string name="jesli_nie_znasz_wartosci_odzywczych_pozostaw_pola_puste">Jeśli nie znasz wartości odżywczych, pozostaw pola puste</string>
    <string name="wartosc_energetyczna_dwukropek">Energia:</string>
    <string name="tluszcz_dwukropek">Tłuszcz:</string>
    <string name="kwasy_dwukropek">Kwasy nasycone:</string>
    <string name="weglowodany_dwukropek">Węglowodany:</string>
    <string name="cukry_dwukropek">Cukry:</string>
    <string name="bialko_dwukropek">Białko:</string>
    <string name="sol_dwukropek">Sól:</string>
</resources>