<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stworz1Activity">

    <LinearLayout
        android:id="@+id/LinearLayout_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_strona_glowna"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo_aplikacji"
            app:srcCompat="@drawable/logo_aplikacji"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/nazwa_aplikacji"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/stworz_nowy_posilek"
            android:textColor="@color/app_green"
            android:textSize="38sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LinearLayout_logo">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/podaj_nazwe_posilku"
            android:textColor="@color/app_green"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/nazwa_posilku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nazwa"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:minHeight="60dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/dalej_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_style"
            android:text="@string/dalej"
            android:layout_marginTop="36dp"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>