<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stworz3Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nazwa_posilku_stworz3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/app_green"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/porcje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ile_porcji"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="60dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/multi_skladniki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/skladniki"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="60dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/dalej3_button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/round_button_style"
                android:text="@string/dalej"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>